@@ -2393,6 +2393,13 @@ You can get back the old behavior with something like this:
 
 In addition, a new command 'U' removes all marks.
 
+---
+*** A new command 'log-view-copy-revision-as-kill' added.
+The new 'log-view-copy-revision-as-kill' command copies the revision of
+the log entry at point to the kill-ring.  When multiple log entries are
+marked the command copies all revisions in a single space separated
+string.  The command is bound by default to `w' in log-view-mode-map.
+
 ** Diff mode
 
 +++
